# ema_fes_cycling

./: .gitignore  CMakeLists.txt  EMA_Trike_Orthosis.perspective  EMA_Trike_v2.perspective  ProcedimentoParaUpdate.txt  README.md  bagfiles.txt  package.xml
cfg/: Conventional.cfg  DynamicParams.cfg  Matrix.cfg  TrikeServer.cfg  Tutorials.cfg
config/: automated_pc.yaml  automated_rasp.yaml  comments.yaml  control.yaml  imu.yaml  stim.yaml  trike.yaml
launch/: demo.launch  emulate.launch  emulator.launch  matrix.launch  record.launch  remote-rqt.sh  remote-wired-rqt.sh  remote_wifi_rqt.sh  remote_wired_rqt.sh  trike.launch  trike_record.launch  trike_record_all.launch  visualization.launch
libs/YEI_3-Space_Python_API_2.0.2.3_Src_19Jun2014/: my_get_data_asynchronous.py  my_get_information_wireless_ex.py  threespace_api.py
other/: bagfiles.txt
other/analysis/: 1-ConvertBagfile.m  (+13 more)
perspective/: EMA_Trike.perspective  EMA_Trike_Cadence.perspective  EMA_Trike_Cadence2.perspective  EMA_Trike_Matrix.perspective  EMA_Trike_remote.perspective
resources/: RecordedWithSpeed.bag  pedal15.bag
scripts/: I2C_LCD_driver.py  button.py  button_node.py  control_node.py  display_emulator.py  display_lcd_node.py  display_node.py  display_oled_node.py  display_test.py  forcesensor_node.py  imu_emulator.py  imu_node.py  interface_node.py  server.py  server_node.py  services_node.py  stimulator_node.py  trike_node.py  trike_server_node.py  ui_node.py
unused/: forcesensor.yaml  forcesensor_node.py  imu.py  imu.yaml  imu_node.py  stimulator.py  stimulator_node.py  trike.yaml
(+32 files in other folders)
